// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoFactor authenticate should throw if code is not set 1`] = `"2FA code required"`;

exports[`TwoFactor authenticate should throw if invalid code 1`] = `"2FA code didn't match"`;

exports[`TwoFactor authenticate should throw that 2fa is not set 1`] = `"2FA not set"`;

exports[`TwoFactor set should set two-factor service 1`] = `
[
  [
    "userId",
    "two-factor",
    {
      "secret": "secret",
    },
  ],
]
`;

exports[`TwoFactor set should throw if code is not set 1`] = `"2FA code required"`;

exports[`TwoFactor set should throw if invalid code 1`] = `"2FA code didn't match"`;

exports[`TwoFactor set should throw if user already have 2fa 1`] = `"2FA already set"`;

exports[`TwoFactor set should throw if user not found 1`] = `"User not found"`;

exports[`TwoFactor unset should throw if code is not set 1`] = `"2FA code required"`;

exports[`TwoFactor unset should throw if invalid code 1`] = `"2FA code didn't match"`;

exports[`TwoFactor unset should throw if user not found 1`] = `"User not found"`;

exports[`TwoFactor unset should throw that 2fa is not set 1`] = `"2FA not set"`;

exports[`TwoFactor unset should unset two-factor service 1`] = `
[
  [
    "userId",
    "two-factor",
  ],
]
`;
